add guard, service and api connexion

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<footer class="bg-gray-900 text-center lg:text-left">
+  <div class="text-gray-50 text-center p-4">
+   Angular Social © 2022 Copyright:
+  </div>
+</footer>
