--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,3 @@
-<p>login works!</p>
+<div class="flex justify-center items-center min-h-screen p-2">
+  <app-login-form class="w-full max-w-sm"></app-login-form>
+</div>
