--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,3 @@
-<p>register works!</p>
+<div class="flex justify-center items-center min-h-screen p-2">
+  <app-register-form class="w-full max-w-sm"></app-register-form>
+</div>
