change style on angular composant and clean code

--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -1,18 +1,11 @@
-<form class="bg-gray-900 p-4 rounded w-full" [formGroup]="loginForm" (ngSubmit)="ngLogin()">
-  <div>
-    <label class="block text-slate-50" for="email">Email</label>
-    <input class="py-1 px-3 bg-slate-200 my-3 rounded w-full" formControlName="email" type="text" id="email"/>
+<form [formGroup]="loginForm" (ngSubmit)="ngLogin()">
+  <div class="mb-3">
+    <label for="InputEmail" class="form-label">Email </label>
+    <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp">
   </div>
-  <div>
-    <label class="block text-slate-50" for="password">Password</label>
-    <input class="py-1 px-3 bg-slate-200 my-3 rounded w-full" type="text" formControlName="password" id="password"/>
+  <div class="mb-3">
+    <label for="InputPassword" class="form-label">Mot de passe</label>
+    <input type="password" class="form-control" id="InputPassword">
   </div>
-
-  <div class="flex justify-center items-center">
-    <button
-      class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">
-      Connexion
-    </button>
-  </div>
+  <button type="submit" class="btn btn-primary">Connexion</button>
 </form>
-
