--- a/src/app/article-detail/article-detail.component.html
+++ b/src/app/article-detail/article-detail.component.html
@@ -1,29 +1,25 @@
-<div class="p-4">
+<div>
   <div>
-    <a
-      routerLink="/articles"
-      class="bg-slate-900 text-slate-50 px-3 py-2 rounded"
-    >
-      Retour</a
-    >
+    <button type="button" class="btn btn-primary" routerLink="/articles">Retour</button>
   </div>
-  <div *ngIf="article">
-    <h1 class="text-4xl text-center">{{ article.titre }}</h1>
 
-    <div class="my-8">
+  <div id="commentary" *ngIf="article">
+    <h1>{{ article.titre }}</h1>
+
+    <div>
       <p>{{ article.contenu }}</p>
     </div>
+
     <div *ngIf="comments">
-      <div
-        class="bg-slate-900 text-slate-50 p-4 my-2 rounded"
-        *ngFor="let comment of comments"
-      >
+      <div *ngFor="let comment of comments">
         <p>{{ comment.contenu }}</p>
       </div>
     </div>
+  </div>
+
     <app-comment-form
       (emitComment)="pushComment($event)"
       [id_article]="article.id_article"
     ></app-comment-form>
-  </div>
+
 </div>
