--- a/src/app/article-form/article-form.component.html
+++ b/src/app/article-form/article-form.component.html
@@ -1,34 +1,10 @@
-<form
-  action=""
-  class="bg-slate-700 p-4 rounded w-full"
-  [formGroup]="postForm"
-  (ngSubmit)="ngPost()"
->
-  <div>
-    <label class="block text-slate-50" for="titre">Titre</label>
-    <input
-      class="py-1 px-3 bg-slate-200 my-3 rounded w-full text-slate-900"
-      type="text"
-      formControlName="titre"
-      id="titre"
-    />
+<form [formGroup]="postForm" (ngSubmit)="ngPost()">
+  <div class="mb-3">
+    <label for="InputTitle" class="form-label">Titre</label>
+    <input type="text" class="form-control" id="InputTitle" formControlName="titre">
+    <label for="contenu" class="form-label">Rédiger votre article</label>
+    <textarea class="form-control" id="contenu" formControlName="contenu"></textarea>
   </div>
-  <div>
-    <label class="block text-slate-50" for="contenu">Contenu</label>
-    <input
-      class="py-1 px-3 bg-slate-200 my-3 rounded w-full text-slate-900"
-      type="text"
-      formControlName="contenu"
-      id="contenu"
-    />
-  </div>
-
-  <div class="flex justify-center items-center">
-    <button
-      class="bg-slate-50 text-slate-700 px-3 py-1 rounded hover:opacity-60 transition-all"
-      type="submit"
-    >
-      Crée
-    </button>
-  </div>
+  <button type="submit" class="btn btn-primary">Publier</button>
 </form>
+
