--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -1,38 +1,21 @@
-<div
-  class="my-4 bg-slate-800 text-slate-50 p-3 rounded transform transition-all hover:translate-y-1"
->
-  <div class="flex justify-between items-center my-2">
-    <div *ngIf="!editing" class="my-2">
-      <h2 class="text-xl">{{ article.titre }}</h2>
+<div>
+  <div>
+    <div *ngIf="!editing">
+      <h2>{{ article.titre }}</h2>
       <p>{{ article.contenu }}</p>
     </div>
 
-    <div
-      class="flex justify-center items-center"
-      *ngIf="tokenData.id === article.id"
-    >
-      <button
-        (click)="editing = !editing"
-        class="bg-green-800 px-3 py-1 mx-2 rounded hover:opacity-80 transition-all"
-      >
+    <div *ngIf="tokenData.id === article.id">
+      <button (click)="editing = !editing" class="btn btn-success">
         {{ editing ? "Annuler" : "Editer" }}
       </button>
-      <button
-        class="bg-red-800 px-3 py-1 mx-2 rounded hover:opacity-80 transition-all"
-      >
+      <button class="btn btn-danger">
         Supprimer
       </button>
     </div>
-    <a
-      class="block bg-slate-50 text-slate-900 px-3 py-1 mx-2 rounded hover:opacity-80 transition-all"
-      routerLink="{{ article.id_article }}"
-    >
-      Voir</a
-    >
+
+    <button type="button" class="btn btn-primary" routerLink="{{ article.id_article }}">Voir l'article</button>
+
   </div>
-  <app-article-form
-    [article]="article"
-    *ngIf="editing"
-    (emitArticle)="pushArticle($event)"
-  ></app-article-form>
+  <app-article-form [article]="article" *ngIf="editing" (emitArticle)="pushArticle($event)"></app-article-form>
 </div>
