--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -1,7 +1,5 @@
-<div class="p-3">
+<div class="list-group">
   <app-article-form (emitArticle)="pushArticle($event)"></app-article-form>
-  <app-article
-    [article]="article"
-    *ngFor="let article of articles"
-  ></app-article>
+  <app-article [article]="article" *ngFor="let article of articles"></app-article>
 </div>
+
