--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer class="bg-gray-900 text-center lg:text-left">
-  <div class="text-gray-50 text-center p-4">
-   Angular Social © 2022 Copyright:
+<footer class="bg-dark text-center text-white">
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    Angular Social © 2022 Copyright
   </div>
 </footer>
