--- a/src/app/register-form/register-form.component.html
+++ b/src/app/register-form/register-form.component.html
@@ -1,25 +1,19 @@
-<form class="bg-gray-900 p-4 rounded w-full" [formGroup]="registerForm" (ngSubmit)="ngRegister()">
-  <div>
-    <label class="block text-slate-50" for="email">Email</label>
-    <input class="py-1 px-3 bg-slate-200 my-3 rounded w-full" formControlName="email" type="text" id="email"/>
+<form [formGroup]="registerForm" (ngSubmit)="ngRegister()">
+  <div class="mb-3">
+    <label for="InputEmail" class="form-label">Email </label>
+    <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp">
   </div>
-  <div>
-    <label class="block text-slate-50" for="pseudo">Pseudo</label>
-    <input class="py-1 px-3 bg-slate-200 my-3 rounded w-full" formControlName="pseudo" type="text" id="pseudo"/>
+  <div class="mb-3">
+    <label for="InputPseudo" class="form-label">Pseudo </label>
+    <input type="text" class="form-control" id="InputPseudo" aria-describedby="emailHelp">
   </div>
-  <div>
-    <label class="block text-slate-50" for="password">Mot de passe</label>
-    <input class="py-1 px-3 bg-slate-200 my-3 rounded w-full" type="text" formControlName="password" id="password"/>
+  <div class="mb-3">
+    <label for="InputPassword" class="form-label">Mot de passe</label>
+    <input type="password" class="form-control" id="InputPassword">
   </div>
-  <div>
-    <label class="block text-slate-50" for="password_confirm">Confirmez le mot de passe</label>
-    <input class="py-1 px-3 bg-slate-200 my-3 rounded w-full" type="text" formControlName="password_confirm"
-           id="password_confirm"/>
+  <div class="mb-3">
+    <label for="InputConfirmPassword" class="form-label">Confirmer le mot de passe</label>
+    <input type="password" class="form-control" id="InputConfirmPassword">
   </div>
-  <div class="flex justify-center items-center">
-    <button
-      class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">
-      Connexion
-    </button>
-  </div>
+  <button type="submit" class="btn btn-primary">Connexion</button>
 </form>
