clear code, delete unused import, rearrange code

--- a/src/app/article-detail/article-detail.component.html
+++ b/src/app/article-detail/article-detail.component.html
@@ -17,9 +17,6 @@
     </div>
   </div>
 
-    <app-comment-form
-      (emitComment)="pushComment($event)"
-      [id_article]="article.id_article"
-    ></app-comment-form>
+  <app-comment-form (emitComment)="pushComment($event)" [id_article]="article.id_article"></app-comment-form>
 
 </div>
